// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseFlatState parses raw doc 1`] = `
Object {
  "entityMap": Object {},
  "value": Array [
    Object {
      "type": "block-start",
    },
    Object {
      "char": "H",
      "styles": Array [],
    },
    Object {
      "char": "e",
      "styles": Array [],
    },
    Object {
      "char": "l",
      "styles": Array [],
    },
    Object {
      "char": "l",
      "styles": Array [],
    },
    Object {
      "char": "o",
      "styles": Array [],
    },
    Object {
      "char": " ",
      "styles": Array [],
    },
    Object {
      "char": "t",
      "styles": Array [],
    },
    Object {
      "char": "h",
      "styles": Array [],
    },
    Object {
      "char": "e",
      "styles": Array [],
    },
    Object {
      "char": "r",
      "styles": Array [],
    },
    Object {
      "char": "e",
      "styles": Array [],
    },
    Object {
      "char": " ",
      "styles": Array [],
    },
    Object {
      "char": "w",
      "styles": Array [],
    },
    Object {
      "char": "o",
      "styles": Array [],
    },
    Object {
      "char": "r",
      "styles": Array [],
    },
    Object {
      "char": "l",
      "styles": Array [],
    },
    Object {
      "char": "d",
      "styles": Array [],
    },
    Object {
      "type": "block-end",
    },
  ],
}
`;

exports[`parseFlatState skips invalid bits 1`] = `
Object {
  "entityMap": Object {},
  "value": Array [
    Object {
      "type": "block-start",
    },
    Object {
      "char": "t",
      "styles": Array [],
    },
    Object {
      "char": "h",
      "styles": Array [],
    },
    Object {
      "char": "e",
      "styles": Array [],
    },
    Object {
      "char": "r",
      "styles": Array [],
    },
    Object {
      "char": "e",
      "styles": Array [],
    },
    Object {
      "type": "block-end",
    },
  ],
}
`;
